# vision.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_code.sh  cli.sh  debug_features.ipynb  excute.sh  feature_0.txt  infer_yolo.sh  output.txt  pyproject.toml  python_fused_gguf_fused_compare.py  run_tests.sh  save_pytorch_ref_conv.py  test_conv_gguf.cpp  yolov9t_demo.py  yolov9t_detections_features_layer_10.txt  yolov9t_detections_features_layer_11.txt  yolov9t_detections_features_layer_12.txt  yolov9t_detections_features_layer_15.txt  yolov9t_detections_features_layer_16.txt  yolov9t_detections_features_layer_17.txt  yolov9t_detections_features_layer_18.txt  yolov9t_detections_features_layer_19.txt  yolov9t_detections_features_layer_20.txt  yolov9t_detections_features_layer_21.txt  yolov9t_detections_features_layer_3.txt  yolov9t_detections_features_layer_4.txt  yolov9t_detections_features_layer_5.txt  yolov9t_detections_features_layer_6.txt  yolov9t_detections_features_layer_7.txt  yolov9t_detections_features_layer_8.txt  yolov9t_detections_features_layer_9.txt  yolov9t_detections_features_predictions.txt  yolov9t_process_input2_f32_debug.ppm  zzzztest.py
.cache/clangd/index/: amx.cpp.FCC413087B16AE68.idx  amx.h.EFBB93E0C4D83C57.idx  arch-fallback.h.F65C29DB8B7DDF39.idx  benchmark.cpp.D03AB3133A29E321.idx  binary-ops.cpp.696C2302F15E2EB7.idx  binary-ops.h.631E7E54761A2A74.idx  birefnet.cpp.67034AD7201FA2A9.idx  birefnet.h.22F2BB5E73460EF0.idx  cli.cpp.253154D527D79B7C.idx  common.h.AB965A595704E188.idx  common.h.E72CCB3AF12ACDE4.idx  esrgan.cpp.9355F9A4A0AC6846.idx  esrgan.h.4B392C484952A06D.idx  ggml-alloc.c.EA1026E15AA22AF3.idx  ggml-alloc.h.C7F9B05437A1108A.idx  ggml-backend-impl.h.740EAEB5582D7F62.idx  ggml-backend-reg.cpp.D4F7D9EFBD4C4775.idx  ggml-backend.cpp.732339E4BCF87C74.idx  ggml-backend.h.E6CD1C279A4A0155.idx  ggml-blas.h.AEAB1B5020439F65.idx  ggml-common.h.80DCAB73B30F4DD8.idx  ggml-cpp.h.3CD03E24FF28B231.idx  ggml-cpu-impl.h.8B38CFCB7D62E631.idx  ggml-cpu.c.B04ECAF605B7493A.idx  ggml-cpu.cpp.030CB87DEEB44340.idx  ggml-cpu.h.0BB1B7B698FECE1C.idx  ggml-impl.h.1DA871AF13793DDB.idx  ggml-opt.cpp.0922D6041669A017.idx  ggml-opt.h.69EDFFA957593A42.idx  ggml-quants.c.1A3231A4C106D1EF.idx  ggml-quants.h.CE9ACC4552EFBDC9.idx  ggml-threading.cpp.7DD1138FC28C1478.idx  ggml-threading.h.B92F6FDE97690458.idx  ggml-vulkan.h.925E76039378C009.idx  ggml.c.90952438A4A8B78B.idx  ggml.cpp.FCB011ABBA4F3B53.idx  ggml.h.78717A6170E27497.idx  gguf.cpp.9EE15077A9E95F22.idx  gguf.h.D4575CA57F995285.idx  hbm.cpp.52810BCB84803582.idx  (+46 more)
.github/workflows/: ci.yml
depend/fmt/: CMakeLists.txt
depend/stb/: CMakeLists.txt  stb.cpp
docs/: model-implementation-guide.md
examples/rpc/: CMakeLists.txt  rpc_client_example.cpp  rpc_server_example.cpp
include/visp/: image.h  image.hpp  ml.h  ml.hpp  util.h  util.hpp  vision.h  vision.hpp
models/: CMakeLists.txt
scripts/: convert.py  dump_yolov9t_compare.py  inference.py  modules.py  upload_references.py  utils.py  yolo_module.py  yolov9.py  yolov9t.py
scripts/cmake/: visioncpp-config.cmake.in
scripts/converters/: birefnet.py  esrgan.py  migan.py  sam.py
src/: CMakeLists.txt  birefnet.cpp  birefnet.hpp  esrgan.cpp  esrgan.hpp  image.cpp  image.hpp  migan.hpp  ml.hpp  mobile_sam.cpp  mobile_sam.hpp  primitives.hpp
src/cli/: CMakeLists.txt  cli.cpp  inference_yolov9t.cpp
src/util/: common.h  math.h  math.hpp  string.h  string.hpp
src/visp/: CMakeLists.txt  birefnet.cpp  birefnet.hpp  esrgan.cpp  esrgan.hpp  image-impl.h  image-impl.hpp  image-ops.hpp  image.cpp  math.hpp  migan.cpp  migan.hpp  ml.cpp  ml.hpp  mobile-sam.cpp  mobile-sam.hpp  nn.cpp  nn.h  nn.hpp  platform.cpp  platform.h  vision.cpp
src/visp/arch/: birefnet.cpp  birefnet.h  birefnet.hpp  depth-anything.cpp  depth-anything.h  dino.cpp  dino.h  esrgan.cpp  esrgan.h  esrgan.hpp  migan.cpp  migan.h  migan.hpp  mobile-sam.cpp  mobile-sam.h  sam3.h  swin.cpp  swin.h  yolov9t.cpp  yolov9t.h
test/: CMakeLists.txt  benchmark.cpp  test_birefnet.py  test_image.cpp  test_image.py  test_migan.py  test_mobile_sam.py  test_primitives.py  test_segmentation.cpp  workbench.cpp  workbench.py
tests/: CMakeLists.txt  benchmark.cpp  conv_test_ref.npz  inference.py  reference-images.cmake  test-birefnet.py  test-esrgan.py  test-image.cpp  test-ml.cpp  test-models.cpp  test-primitives.py  test_birefnet.py  test_depth_anything.py  test_esrgan.py  test_make_anchors.py  test_make_anchors_cpp.py  test_migan.py  test_mobile_sam.py  test_primitives.py  test_sam3.py  test_yolov9t.py  testing.cpp  testing.h  testing.hpp  workbench.cpp  workbench.py  yolov9t.py
