[project]
dynamic = ["version"]
name = "vision.cpp"
requires-python = ">=3.12"
dependencies = [
    "torch<2.8",
    "torchvision<0.23",
    "timm",
    "pytest",
    "opencv-python",
    "ruff",
    "einops>=0.8.1",
    "spandrel>=0.4.1",
    "gguf>=0.17.1",
    "numpy<2.0",
    "ultralytics>=8.3.203",
    "ipython>=9.6.0",
    "ggml-python>=0.0.37",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
preview = true

[tool.ruff.lint]
ignore = ["E741"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
