add_executable(vision-cli)
target_sources(vision-cli PRIVATE cli.cpp)
target_include_directories(vision-cli PRIVATE ..)
target_compile_definitions(vision-cli PRIVATE ${VISP_ASSERT} ${VISP_FMT_DEFS})
target_compile_options(vision-cli PRIVATE ${VISP_WARNINGS})
target_link_libraries(vision-cli PRIVATE visioncpp ${VISP_FMT_LINK})